--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <section class="h-screen flex items-center justify-center bg-primary-yellow">
     
-    <div class="p-4 w-80 h-100 rounded-2xl bg-secondary-white border border-secondary-black border-r-[0.5rem] border-b-[0.5rem]">
+    <div class="p-4 w-80 h-100 rounded-2xl bg-secondary-white border border-secondary-black shadow-normal hover:shadow-hover">
 
       <img class="rounded-2xl mb-6" src="./assets/images/illustration-article.svg" alt="">
 
